# TimeTrack

./: README.md
gui/: home.html  index.html  main.html  time.html
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/res/drawable/: ic_menu_accomodations.xml  ic_menu_assignments.xml  ic_menu_flights.xml  ic_menu_projects.xml  ic_menu_times.xml  rounded_corner_rectangle_background.xml
mobile/app/src/main/res/layout/: activity_assignments.xml  activity_project_data_view.xml  activity_projects_view.xml  activity_time_add.xml  activity_time_track_home.xml  activity_time_view.xml  app_bar_assignments.xml  app_bar_projects_view.xml  app_bar_time_track_home.xml  app_bar_time_view.xml  assignment_date_area.xml  assignment_description_area.xml  assignment_list_item.xml  break_time_area.xml  content_assignments.xml  content_project_data_view.xml  content_projects_view.xml  content_time_add.xml  content_time_track_home.xml  content_time_view.xml  content_times_suggestion.xml  date_area.xml  date_time_area.xml  dialog_property_content.xml  duration_area.xml  listitem.xml  spinnerlayout.xml  time_task_description_area.xml  times_list_item.xml
mobile/app/src/main/res/menu/: activity_time_track_home_drawer.xml
mobile/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
mobile/app/src/main/res/xml/: pref_general.xml  (+1 more)
mobile/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt
server/incl/: requesthandler.hpp  tcpconnection.hpp
server/src/: CMakeLists.txt  main.cpp  requesthandler.cpp  tcpconnection.cpp
(+110 files in other folders)
