CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(TimeTrackServer)

IF(NOT DEFINED CMAKE_MODULE_PATH)
	LIST(APPEND CMAKE_MODULE_PATH "/usr/share/cmake_modules/cmake/Modules")
ENDIF(NOT DEFINED CMAKE_MODULE_PATH)


# PROJECT_DESCRIPTION("This project deals with the server part of TimeTrack.")

FIND_PACKAGE(Poco REQUIRED NET JSON)

INCLUDE_DIRECTORIES(incl)
ADD_SUBDIRECTORY(src)